# Integrity-Launcher

./: .gitattributes  .gitignore  Cargo.toml  IMPLEMENTATION_COMPLETE.md  LICENSE  QUICK_START.md  README.md  SELF_HEALING_IMPLEMENTATION.md  build.ps1  build_windows.bat  buildint.bat  buildsetup.bat  buildsetup.ps1  flamegraph.sh  rustfmt.toml  setup.iss  vendor.sh
.cargo/: config.toml
.github/workflows/: build.yml  cd.yml
.zed/: settings.json
crates/auth/: Cargo.toml
crates/auth/src/: auth_page.html  authenticator.rs  credentials.rs  lib.rs  models.rs  secret.rs
crates/backend/: Cargo.toml
crates/backend/src/: account.rs  arcfactory.rs  backend.rs  backend_filesystem.rs  backend_handler.rs  directories.rs  discord_rpc.rs  id_slab.rs  install_content.rs  instance.rs  java_manifest.rs  lib.rs  lockfile.rs  log_reader.rs  mod_metadata.rs  persistent.rs  self_heal.rs  server_list_pinger.rs  shortcut.rs  skin_manager.rs  syncing.rs  update.rs
crates/backend/src/launch/: mod.rs
crates/backend/src/launcher_import/: atlauncher.rs  curseforge.rs  mod.rs  modrinth.rs  multimc.rs
crates/backend/src/metadata/: items.rs  manager.rs
crates/backend/src/self_heal/: java_manager.rs  library_manager.rs  log_uploader.rs  mod.rs  natives_manager.rs  repair_manager.rs  utils.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: account.rs  game_output.rs  handle.rs  import.rs  install.rs  instance.rs  lib.rs  message.rs  meta.rs  modal_action.rs  notify_signal.rs  quit.rs  safe_path.rs  serial.rs
crates/command/: Cargo.toml
crates/command/src/: command.rs  exit_status.rs  lib.rs  path_cache.rs  process.rs  spawner.rs
crates/command/src/unix/: mod.rs  unix_helpers.rs  unix_spawn.rs
crates/command/src/unix/linux/: bwrap.rs  flatpak.rs  mod.rs  pkexec.rs
crates/command/src/unix/macos/: elevated.rs  mod.rs  sandbox.rs
crates/command/src/windows/: appcontainer.rs  mod.rs  runas.rs  windows_helpers.rs  windows_spawn.rs
crates/frontend/: Cargo.toml
crates/frontend/locales/: locales.yml
crates/frontend/src/: boot_sequence.rs  data_asset_loader.rs  discord_rpc.rs  icon.rs  interface_config.rs  lib.rs  png_render_cache.rs  processor.rs  root.rs  skin_renderer.rs  skin_thumbnail_cache.rs  ui.rs
crates/frontend/src/component/: content_list.rs  error_alert.rs  horizontal_sections.rs  instance_list.rs  menu.rs  mod.rs  named_dropdown.rs  page_path.rs  path_label.rs  player_model.rs  player_model_widget.rs  progress_bar.rs  readonly_text_field.rs  resize_panel.rs  responsive_grid.rs  search_helper.rs  shrinking_text.rs  title_bar.rs
crates/frontend/src/entity/: account.rs  instance.rs  metadata.rs  mod.rs
crates/frontend/src/game_output/: mod.rs
crates/frontend/src/modals/: create_instance.rs  curseforge_install.rs  delete_instance.rs  generic.rs  mod.rs  modrinth_install.rs  select_icon.rs  settings.rs  update_prompt.rs
crates/frontend/src/pages/: curseforge_page.rs  import.rs  instances_page.rs  integrity_modpack_page.rs  mod.rs  modrinth_page.rs  modrinth_project_page.rs  page.rs  skins_page.rs  syncing_page.rs
crates/frontend/src/pages/instance/: instance_page.rs  logs_subpage.rs  mods_subpage.rs  quickplay_subpage.rs  resource_packs_subpage.rs  settings_subpage.rs
crates/integrity_launcher/: Cargo.toml  build.rs
crates/integrity_launcher/src/: main.rs
crates/nbt/: Cargo.toml
crates/nbt/src/: decode.rs  encode.rs  lib.rs  pretty.rs  reference.rs
crates/nbt/src/stringified/: from_snbt.rs  to_snbt.rs
crates/pandora_launcher/: Cargo.toml
crates/pandora_launcher/src/: main.rs  panic.rs
crates/reqwest_client/: Cargo.toml
crates/reqwest_client/src/: http_client_tls.rs  reqwest_client.rs
crates/schema/: Cargo.toml
crates/schema/src/: assets_index.rs  auxiliary.rs  backend_config.rs  content.rs  curseforge.rs  fabric_launch.rs  fabric_mod.rs  forge.rs  forge_mod.rs  global_modpack.rs  instance.rs  java_runtime_component.rs  java_runtimes.rs  lib.rs  loader.rs  minecraft_profile.rs  modification.rs  modrinth.rs  mrpack.rs  pandora_update.rs  resourcepack.rs  server_status.rs  text_component.rs  unique_bytes.rs  version.rs  version_manifest.rs
crates/t/: Cargo.toml  build.rs  locales.toml
crates/t/src/: lib.rs
package/: create_ico.sh
package/flatpak/: com.moulberry.PandoraLauncher.desktop  com.moulberry.PandoraLauncher.metainfo.xml
scripts/: Build_windows_setup.ps1  build_linux.ps1  build_linux.sh  build_mac.ps1  build_mac.sh  build_windows.ps1  build_windows.sh
src/com/integritylauncher/selfhealing/: IntegrityLauncherExample.java  JavaManager.java  LauncherIntegration.java  LibraryManager.java  LogManager.java  NativesManager.java  README.md  RepairManager.java  SelfHealingConfig.java  SelfHealingSystem.java  Validator.java
wrapper/: build.sh  manifest.txt
wrapper/com/moulberry/pandora/: LaunchWrapper.java
