[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
auth.workspace = true
tokio.workspace = true
serde.workspace = true
sha1.workspace = true
ustr.workspace = true
schema.workspace = true
nbt.workspace = true
bridge.workspace = true
chrono.workspace = true
hex.workspace = true
futures.workspace = true
regex.workspace = true
reqwest.workspace = true
thiserror.workspace = true
os_info.workspace = true
anyhow.workspace = true
serde_json.workspace = true
flate2.workspace = true
slab.workspace = true
notify.workspace = true
sanitize-filename.workspace = true
notify-debouncer-full.workspace = true
base64.workspace = true
uuid.workspace = true
image.workspace = true
rustc-hash.workspace = true
lexical-sort.workspace = true
indexmap.workspace = true
serde_with.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
lzma-rs.workspace = true
enum-map.workspace = true
strum.workspace = true
rand.workspace = true
rayon.workspace = true
rc-zip-sync.workspace = true
relative-path.workspace = true
shell-words.workspace = true
serde-xml-rs.workspace = true
memchr.workspace = true
toml.workspace = true
log.workspace = true
minisign-verify.workspace = true
tar.workspace = true
runas.workspace = true
rusqlite.workspace = true
walkdir.workspace = true
url.workspace = true
crc32fast.workspace = true
scopeguard.workspace = true
hickory-resolver.workspace = true
command.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
junction.workspace = true
mslnk.workspace = true
windows.workspace = true
