[package]
name = "command"
version = "0.1.0"
edition.workspace = true

[dependencies]
once_cell.workspace = true
parking_lot.workspace = true
rustc-hash.workspace = true
directories.workspace = true
log.workspace = true
tokio.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libseccomp.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true
security-framework-sys.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true
junction.workspace = true
scopeguard.workspace = true
